<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".ui.CutActivity">


    <com.darcy.lib_media3_player.view.DarcyPlayerView
        android:id="@+id/videoPlayerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:auto_show="true"
        app:controller_layout_id="@layout/player_control_view_layout"
        app:fastforward_icon="@drawable/fast_forward_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pause_icon="@drawable/pause_100"
        app:play_icon="@drawable/play_100"
        app:resize_mode="fit"
        app:rewind_icon="@drawable/rewind_100"
        app:show_timeout="1000"
        app:time_bar_min_update_interval="100"
        app:use_controller="true" />

    <Space
        android:id="@+id/spaceBottom"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="video info"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/spaceBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnMarkStartTime"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/start_00_00_00_empty"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spaceTop"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnMarkEndTime"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/end_00_00_00_empty"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnMarkStartTime" />

    <Space
        android:id="@+id/spaceTop"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tvInfo" />


    <TextView
        android:id="@+id/tvCutPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:text="@string/cut_period_empty"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="05:00" />


    <Button
        android:id="@+id/btnCut"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="@string/cut_cut"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCutPeriod"
        app:layout_constraintEnd_toStartOf="@+id/tvCutPeriod"
        app:layout_constraintStart_toEndOf="@+id/btnLandScreen"
        app:layout_constraintTop_toTopOf="@+id/tvCutPeriod" />


    <Button
        android:id="@+id/btnCut2"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="@string/cut_cut"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCutPeriod"
        app:layout_constraintEnd_toStartOf="@+id/btnSelectVideo"
        app:layout_constraintStart_toEndOf="@+id/tvCutPeriod"
        app:layout_constraintTop_toTopOf="@+id/tvCutPeriod" />

    <Button
        android:id="@+id/btnLandScreen"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/land_screen_orientation"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnSelectVideo"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/select_video"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelectVideo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="100dp"
        android:paddingEnd="100dp"
        android:text="@string/select_video"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/videoPlayerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/videoPlayerView" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/cardview_shadow_start_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>